Se crea funcion para consultar informacion personal de un tercero, tambien se eliminan todos los campos de fecha de creacion y modificacion por ajuste del API terceros #52
