# swagger/swagger.yml
@@ -351,6 +351,24 @@ paths:
           description: '{}'
         "403":
           description: body is empty
+  /persona/consultar_persona/{tercero_id}:
+    get:
+      tags:
+      - persona
+      description: get ConsultaPersona by id
+      operationId: PersonaController.ConsultarPersona
+      parameters:
+      - in: path
+        name: tercero_id
+        description: Id del tercero
+        required: true
+        type: integer
+        format: int64
+      responses:
+        "200":
+          description: '{}'
+        "404":
+          description: not found resource
   /persona/guardar_complementarios:
     post:
       tags:
